[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "mkdocs-nbconvert"
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "A MkDocs plug-in provides a source parser for *.ipynb Jupyter notebook files, base on nbconvert."
keywords = [
  "mkdocs",
  "mkdocs-plugin",
  "jupyter",
  "notebook",
  "jupyter-notebook",
  "markdown",
  "md",
  "nbconvert",
]
license = { text = "BSD-3-Clause" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  # "Development Status :: 1 - Planning",
  # "Development Status :: 2 - Pre-Alpha",
  # "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  # "Development Status :: 6 - Mature",
  # "Development Status :: 7 - Inactive",
  "Topic :: Documentation",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

# requires
dependencies = ["mkdocs>=1.4", "nbconvert>=4.2"]

# Project links
[project.urls]
Homepage = "https://tanbro.github.io/mkdocs-nbconvert"
Repository = "https://github.com/tanbro/mkdocs-nbconvert"
Documentation = "https://tanbro.github.io/mkdocs-nbconvert"

[project.entry-points."mkdocs.plugins"]
nbconvert = "mkdocs_nbconvert:NbConvertPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/mkdocs_nbconvert/_version.py"

[tool.black]
line-length = 128
[tool.isort]
profile = "black"
