[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "mkdocs-nbconvert"
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "A MkDocs plug-in provides a source parser for *.ipynb Jupyter notebook files, base on nbconvert."
keywords = [
  "mkdocs",
  "mkdocs-plugin",
  "jupyter",
  "notebook",
  "jupyter-notebook",
  "markdown",
  "md",
  "nbconvert",
]
license = { text = "BSD-3-Clause" }
classifiers = [
  # "Development Status :: 1 - Planning",
  # "Development Status :: 2 - Pre-Alpha",
  # "Development Status :: 3 - Alpha",
  # "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  # "Development Status :: 6 - Mature",
  # "Development Status :: 7 - Inactive",
  "Topic :: Documentation",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
]
dynamic = ["version"]

requires-python = ">=3.8"

# requires
dependencies = [
  "mkdocs>=1.6",
  "nbconvert>=4.2",
  "typing-extensions>=4.5.0; python_version<'3.12'",
]

# Project links
[project.urls]
Homepage = "https://tanbro.github.io/mkdocs-nbconvert"
Repository = "https://github.com/tanbro/mkdocs-nbconvert"
Documentation = "https://tanbro.github.io/mkdocs-nbconvert"

[project.entry-points."mkdocs.plugins"]
nbconvert = "mkdocs_nbconvert:NbConvertPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mkdocs_nbconvert" = ["mkdocs_nbconvert/py.typed"]

[tool.setuptools_scm]
write_to = "src/mkdocs_nbconvert/_version.py"
