[metadata]
name = mkdocs-nbconvert
description = A MkDocs plug-in provides a source parser for *.ipynb files
url = https://tanbro.github.io/mkdocs-nbconvert
project_urls =
    Documentation = https://tanbro.github.io/mkdocs-nbconvert
    Source = https://github.com/tanbro/mkdocs-nbconvert
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = mkdocs, mkdocs-plugin, jupyter, notebook, jupyter-notebook, markdown, md, nbconvert
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Topic :: Documentation
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6

[options.packages.find]
where = src
